--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,9 +1,3 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/1.4.1_apartment.xml
-  - include:
-      file: db/changelog/1.4.2_advert.xml
-  - include:
-      file: db/changelog/1.4.3_client.xml
-  - include:
-      file: db/changelog/1.4.4_booking.xml
+      file: db/changelog/flat_rent.xml
