refactor: correct failures, new changeSet to flat_rent

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/flat_rent.xml
+  - include:
+      file: db/changelog/change_flat_rent.xml
